<resources>
    <string name="app_name" translatable="false">Park\'in</string>

    <string name="search">Search</string>
    <string name="best_place">Best parking space</string>

    <string name="filtreParking">Parking lots filter</string>
    <string name="filtrePlaces">Parking spaces filter</string>

    <string name="parkingPrives">Private parking lots</string>
    <string name="parkingPublics">Public parking lots</string>
    <string name="placesLibres">Free spaces</string>
    <string name="placesOccupées">Busy spaces</string>
    <string name="placesEnCoursLiberation">Spaces about to be freed</string>
    <string name="unable_to_locate">We could not get your location.</string>
    <string name="need_rights">Please allow the app to get your location in your phone\'s settings.</string>
    <string name="nav_drawer_open">Open navigation drawer.</string>
    <string name="nav_drawer_closed">Closed navigation drawer</string>
    <string name="option_location_gare">Where is my car?</string>
    <string name="option_location_settings">Settings</string>
    <string name="option_location_account">My account</string>
    <string name="location_vehicule">You are not parked!</string>
    <string name="error_getting_parks">We could not get the nearby parking spaces. Please check your Internet connection and retry.</string>
    <string name="retry">Retry</string>
    <string name="close">Close</string>

    <string name="portee">Range</string>

    <string name="portee_cle" translatable="false">portee</string>

    <string name="time_h">"%1$s h %2$s min"</string>
    <string name="time_m">"%1$s min"</string>
    <string name="time_now"><![CDATA[< 1 min]]></string>

    <string name="afficherPlacesPortee">Search radius</string>
    <string name="distance">Distance</string>
    <string name="meters">%1$s meters</string>
    <string name="kilometers">%1$s kilometer(s)</string>
    <string name="parking">Parking</string>
    <string name="public_spot">Public</string>
    <string name="private_spot">Private</string>
    <string name="since">For</string>

    <string name="free_spot">Free space for %1$s</string>
    <string name="busy_spot">Busy space for %1$s</string>
    <string name="moving_spot">Space is being freed for %1$s</string>
    <string name="unknown_spot">Unknown state</string>

    <string name="yes_countdown">Yes (%1$s)</string>
    <string name="run_navigation">Do you want to run the navigation?</string>
    <string name="no">No</string>
    <string name="reserved_spots">Your space has been booked</string>
    <string name="yes_5">Yes (5)</string>
    <string name="connect_error_geocoder">Unable to get results, please check your Internet connection.</string>
    <string name="ok">OK</string>
    <string name="no_result">No result found, please retry.</string>
    <string name="error">Error</string>
    <string name="anti_theft_text">We will make sure it does not move</string>
    <string name="anti_theft_title">Anti-Theft enabled</string>
    <string name="car_moving_text">Is it you?</string>
    <string name="car_moving_title">Your car is moving!</string>
    <string name="distance_unknown">Unknown</string>

    <string name="parking_public_key" translatable="false">parking_public_key</string>
    <string name="parking_private_key" translatable="false">parking_prives_key</string>
    <string name="place_moving_key" translatable="false">places_en_cours_key</string>
    <string name="place_busy_key" translatable="false">places_occupees_key</string>
    <string name="place_libre_key" translatable="false">places_libres_key</string>

    <string name="last_update">Last update</string>
    <string name="depuis">%1$s ago</string>
    <string name="park_here">I am parked here</string>

    <string name="distance_gare">You are parked at %1$s m</string>
    <string name="already_parked">You are already parked</string>
    <string name="parked_here">Your position has been saved</string>
</resources>