<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sample="http://schemas.android.com/apk/res-auto">
    >

    <PreferenceCategory
        android:title="@string/filtrePlaces">

        <CheckBoxPreference
            android:title="@string/placesLibres"
            android:defaultValue="true"
            android:key="@string/place_libre_key" />

        <CheckBoxPreference
            android:title="@string/placesOccupées"
            android:defaultValue="true"
            android:key="@string/place_busy_key" />

        <CheckBoxPreference
            android:title="@string/placesEnCoursLiberation"
            android:defaultValue="true"
            android:key="@string/place_moving_key" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/filtreParking">

    <CheckBoxPreference
            android:title="@string/parkingPublics"
            android:defaultValue="true"
            android:key="@string/parking_public_key" />

        <CheckBoxPreference
            android:title="@string/parkingPrives"
            android:defaultValue="true"
            android:key="@string/parking_private_key" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/portee">

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:key="@string/portee_cle"
            android:title="@string/afficherPlacesPortee"
            sample:msbp_minValue="100"
            sample:msbp_maxValue="3000"
            sample:msbp_interval="100"
            sample:msbp_measurementUnit="m"/>

    </PreferenceCategory>

</PreferenceScreen>